--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,7 +9,15 @@
   },
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.55",
-    "meteor-node-stubs": "^0.4.1"
+    "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
+    "history": "^4.7.2",
+    "jquery": "^3.3.1",
+    "meteor-node-stubs": "^0.4.1",
+    "popper.js": "^1.14.4",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-router": "^4.3.1"
   },
   "meteor": {
     "mainModule": {
@@ -17,5 +25,8 @@
       "server": "server/main.js"
     },
     "testModule": "tests/main.js"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2"
   }
 }
