--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.55",
+    "bcrypt": "^3.0.1",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "jquery": "^3.3.1",
@@ -17,7 +18,8 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "simple-icons": "^1.9.1"
   },
   "meteor": {
     "mainModule": {
