--- a/package.json
+++ b/package.json
@@ -22,15 +22,21 @@
   },
   "homepage": "https://github.com/ppak10/Flask-React-Notes#readme",
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.1.5",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.0",
     "node-sass": "^4.9.3",
+    "postcss-loader": "^3.0.0",
+    "precss": "^3.1.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "webpack": "^4.20.2",
