--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "copy-react": "babel node_modules/react --out-dir server/static/node_modules/react --copy-files",
-    "copy-react-dom": "babel node_modules/react-dom --out-dir server/static/node_modules/react-dom --copy-files",
-    "watch-jsx": "npx babel --watch src --out-dir server/static/js/components --presets=@babel/preset-react",
     "build": "webpack",
-    "dev": "npm run watch-jsx"
+    "dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -45,6 +42,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
   }
 }
