--- a/flask-javascript/package.json
+++ b/flask-javascript/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/ppak10/Flask-React-Notes#readme",
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "cross-fetch": "^2.2.2",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "prop-types": "^15.6.2",
