--- a/flask-javascript/package.json
+++ b/flask-javascript/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:prod": "webpack -p --env=prod",
     "build:dev": "webpack -d --env=dev",
-    "dev": "webpack-dev-server -p --env=dev"
+    "dev": "webpack-dev-server -d --env=dev"
   },
   "repository": {
     "type": "git",
@@ -46,7 +46,7 @@
     "postcss-loader": "^3.0.0",
     "precss": "^3.1.2",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^3.1.2",
