--- a/flask-javascript/package.json
+++ b/flask-javascript/package.json
@@ -31,7 +31,8 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "three": "^0.97.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
