--- a/flask-javascript/package.json
+++ b/flask-javascript/package.json
@@ -40,8 +40,10 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@wildpeaks/three-webpack-plugin": "^2.0.0",
     "autoprefixer": "^9.1.5",
     "babel-loader": "^8.0.4",
+    "copy-webpack-plugin": "^4.5.3",
     "css-loader": "^1.0.0",
     "node-sass": "^4.9.3",
     "postcss-loader": "^3.0.0",
