--- a/flask-javascript/package.json
+++ b/flask-javascript/package.json
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/ppak10/Flask-React-Notes#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.6",
+    "@fortawesome/free-brands-svg-icons": "^5.4.1",
+    "@fortawesome/free-solid-svg-icons": "^5.4.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.1.3",
     "cross-fetch": "^2.2.2",
     "jquery": "^3.3.1",
