--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --env=development",
     "start": "webpack-dev-server --env=development"
   },
   "author": "",
@@ -17,12 +18,10 @@
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.3.1",
     "babel-loader": "^8.0.4",
-    "bootstrap": "^4.1.3",
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.3.1",
-    "node-sass": "^4.10.0",
-    "popper.js": "^1.14.5",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "precss": "^3.1.2",
     "react": "^16.6.3",
@@ -30,7 +29,6 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
