--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon index.js"
+    "start:dev": "nodemon index.js",
+    "serve": "sequelize db:migrate && sequelize db:seed:all && nodemon index.js"
   },
   "author": "",
   "license": "ISC",
