--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "postcss-loader": "^3.0.0",
     "precss": "^3.1.2",
     "react": "^16.6.3",
+    "react-dnd": "^6.0.0",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
