--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^4.6.0",
     "webpack-dev-server": "^3.1.10"
   }
 }
