--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "main entry file to hold start scripts",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/mocha/bin/_mocha",
     "dev:install": "./install-dev.sh",
     "dev:up": "docker-compose -f docker/docker-compose.dev.yml up",
     "dev:down": "docker-compose -f docker/docker-compose.dev.yml down",
@@ -23,8 +23,11 @@
   "homepage": "https://github.com/ppak10/Docker-Node-Notes#readme",
   "dependencies": {},
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
     "eslint": "^5.9.0",
     "eslint-config-google": "^0.11.0",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint-plugin-react": "^7.11.1",
+    "mocha": "^5.2.0"
   }
 }
