--- a/api/server/config/config.json
+++ b/api/server/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "myclientuser",
-    "password": "myclientpassword",
-    "database": "myclientdb",
+    "username": "myappuser",
+    "password": "myapppassword",
+    "database": "myappdb",
     "host": "db",
     "port": 5432,
     "dialect": "postgres"
