--- a/docker/db/psql.env
+++ b/docker/db/psql.env
@@ -1,4 +1,4 @@
-POSTGRES_USER=myclientuser
-POSTGRES_PASSWORD=myclientpassword
-POSTGRES_DB=myclientdb
+POSTGRES_USER=myappuser
+POSTGRES_PASSWORD=myapppassword
+POSTGRES_DB=myappdb
 PGDATA=/data
