--- a/config/nginx/nginx.dev.conf
+++ b/config/nginx/nginx.dev.conf
@@ -28,9 +28,9 @@ http {
         server api:8080 max_fails=3 fail_timeout=30s;
     }
 
-    upstream client {
+    upstream app {
         least_conn;
-        server client:3000 max_fails=3 fail_timeout=30s;
+        server app:3000 max_fails=3 fail_timeout=30s;
     }
 
     server {
@@ -49,7 +49,7 @@ http {
         error_page  405     =200 $uri;
 
         location / {
-            proxy_pass http://client;
+            proxy_pass http://app;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
