--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:up": "docker-compose -f docker/docker-compose.dev.yml up",
     "dev:down": "docker-compose -f docker/docker-compose.dev.yml down",
     "dev:connect:api": "docker exec -it target_api_1 /bin/sh",
-    "dev:connect:db": "psql -h localhost -p 5431 -U myclientuser -d myclientdb"
+    "dev:connect:db": "psql -h localhost -p 5431 -U myappuser -d myappdb"
   },
   "repository": {
     "type": "git",
